Fixed issue where images on category pages would sometimes appear squashed

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -288,6 +288,7 @@ footer
   margin 0
 
 .details > li > img
+  flex-shrink 0
   @media screen and (max-width: $page-onebigwide)
     width $column-width
     height $column-width * 0.75
